gh-4135 Add cross-module migs WIP, fix UI issues